# TacCap-Gripper

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  leader_demo.cpp  taccap_hello.cpp
cpp/include/taccap/: control_loop.hpp  discovery.hpp  error.hpp  follower_gripper.hpp  gripper_position.hpp  leader_gripper.hpp  log.hpp  ota.hpp  version.hpp.in  vision.hpp
cpp/include/taccap/bus/: frame.hpp  serial_bus.hpp  transport.hpp
cpp/include/taccap/components/: camera.hpp  encoder.hpp  imu.hpp  key.hpp  motor.hpp  sensor_errors.hpp  tactile_sensor.hpp
cpp/include/taccap/protocol/: codec.hpp  commands.hpp  payloads.hpp
cpp/src/: control_loop.cpp  discovery.cpp  follower_gripper.cpp  leader_gripper.cpp  log.cpp  ota.cpp
cpp/src/bus/: frame.cpp  serial_bus.cpp  transport.cpp
cpp/src/components/: camera.cpp  encoder.cpp  imu.cpp  key.cpp  motor.cpp  sensor_errors.cpp  tactile_sensor.cpp
cpp/src/protocol/: codec.cpp  commands.cpp
cpp/tests/: CMakeLists.txt  pty_helper.hpp  test_codec.cpp  test_codec_v16.cpp  test_codec_v17.cpp  test_components.cpp  test_crc.cpp  test_crc32_boundaries.cpp  test_discovery.cpp  test_frame.cpp  test_gripper_position.cpp  test_log.cpp  test_python_compat.cpp  test_stuff.cpp  test_transport.cpp  test_upper_v16.cpp  test_upper_v16_pty.cpp
docs/: ARCHITECTURE.md
python/: CMakeLists.txt
python/bindings/: components.cpp  log.cpp  module.cpp
python/examples/: calibrate.py  gripper_control_test.py  motor_mit_control.py  ota_update.py  rerun_dual_with_tracker.py  rerun_visualize.py  v4l2_probe.py  v4l2_sweep.py
python/xense/taccap/: __init__.py
