[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "taccap-gripper"
version = "0.1.0"
description = "TacCap-Gripper multimodal tactile gripper SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "XenseRobotics Co., Ltd." }]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "http://192.168.1.61/physical-ai/grippersdk/taccap-gripper"

[tool.scikit-build]
wheel.packages = ["python/xense"]
cmake.version = ">=3.20"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
TACCAP_BUILD_PYTHON = "ON"
TACCAP_BUILD_EXAMPLES = "OFF"
